Create submissions model and record submissions to hmrc interface
